@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-04-30
+	Added: Parent finding. Enabled per-rule and in general in advanced options.
 ### 2019-04-28
 	Added: Advanced configuration now temporarily hosts ignore and protected lists.
 		No configuration is allowed in the UI for these as they're purely informative. These will be moved elsewhere in later update.
